--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,23 +1,9 @@
-# App info (optional)
-spring.application.name=campus-events-backend
-
-# =========================
-# MySQL datasource config
-# =========================
+# MySQL Dev DB
 spring.datasource.url=jdbc:mysql://localhost:3306/campus_events_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=newuser1234
-
+spring.datasource.username=campus_app
+spring.datasource.password=newuser123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# =========================
-# JPA / Hibernate config
-# =========================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# (Optional) See SQL in logs more clearly
+# Logging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
